--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "drizzle-kit": "^0.31.8",
     "drizzle-orm": "^0.45.0",
     "intlayer": "^7.5.14",
+    "lru-cache": "^11.2.4",
     "lucide-react": "^0.561.0",
     "motion": "^12.26.2",
     "next-themes": "^0.4.6",
