feat: add aws4fetch dependency for S3 compatible storage integration, enhance roadmap configuration with new features and descriptions for user avatar provider and storage settings

--- a/content/roadmap/config.en.json
+++ b/content/roadmap/config.en.json
@@ -5,20 +5,41 @@
       "icon": "Calendar",
       "color": "#60A5FA",
       "items": [
-        { "title": "Landing video intro" }
+        { "title": "Subscription Management", "description": "Self-service subscription management, upgrades, downgrades, and cancellations" },
+        { "title": "Email Template Editor", "description": "Visual email template editor with custom styling support" },
+        { "title": "API Key Management", "description": "Create and manage API keys for users" },
+        { "title": "Agent Template Modifier", "description": "Quickly modify template code locally via AI Agent" }
       ]
     },
     {
       "title": "In Progress",
       "icon": "Loader",
       "color": "#F59E0B",
-      "items": []
+      "items": [
+        { "title": "More Payment Adapters", "description": "Integration with PayPal, WeChat Pay, Alipay and more" },
+        { "title": "AI Service Integration", "description": "Integration with OpenAI, DeepSeek, Replicate and more AI services, support text, image, video, audio generation" }
+      ]
     },
     {
       "title": "Shipped",
       "icon": "Rocket",
       "color": "#34D399",
-      "items": []
+      "items": [
+        { "title": "TanStack Start Framework", "description": "Built with React 19 + TanStack Router/Query" },
+        { "title": "Better Auth System", "description": "Email login, social login, magic link and more authentication methods" },
+        { "title": "Internationalization", "description": "Complete i18n solution based on intlayer with multi-language support" },
+        { "title": "Stripe Payment & Subscription", "description": "One-time payments and subscriptions with automatic webhook handling" },
+        { "title": "Credit System", "description": "Sign-up bonus, daily rewards, credit purchase and consumption, credit history" },
+        { "title": "Resend Email Service", "description": "React Email templates + Resend delivery service" },
+        { "title": "Admin Dashboard", "description": "User management, config management, credit packages, product management" },
+        { "title": "RBAC Access Control", "description": "Fine-grained role-based permission management" },
+        { "title": "Fumadocs Documentation", "description": "MDX-powered documentation site" },
+        { "title": "Blog System", "description": "MDX-powered blog content management" },
+        { "title": "Changelog", "description": "Product update changelog page" },
+        { "title": "Waitlist", "description": "Pre-launch user collection" },
+        { "title": "Theme & Dark Mode", "description": "Theme switching with system preference support" },
+        { "title": "S3 Storage Integration", "description": "S3-compatible cloud storage for user avatars and file uploads" }
+      ]
     }
   ]
 }
