--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@tanstack/router-plugin": "^1.157.16",
     "@types/mdx": "^2.0.13",
     "@unpic/react": "^1.0.2",
+    "aws4fetch": "^1.0.20",
     "better-auth": "^1.4.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
