--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,30 @@ name: CI
 on:
   push:
     branches: [main]
+    paths-ignore:
+      - "**.md"
+      - "LICENSE"
+      - ".editorconfig"
+      - ".vscode/**"
+      - ".cursor/**"
+      - ".github/**"
+      - "!.github/workflows/**"
+      - "content/**"
+      - "public/**"
+      - "promo-video/**"
   pull_request:
     branches: [main]
+    paths-ignore:
+      - "**.md"
+      - "LICENSE"
+      - ".editorconfig"
+      - ".vscode/**"
+      - ".cursor/**"
+      - ".github/**"
+      - "!.github/workflows/**"
+      - "content/**"
+      - "public/**"
+      - "promo-video/**"
 
 jobs:
   lint:
